[gd_scene load_steps=17 format=3 uid="uid://cjne55in8jooq"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_xdsmo"]
[ext_resource type="Texture2D" uid="uid://cebwlq7q3037f" path="res://assets/Sprite Pack 2/2 - Mr. Mochi/Idle (32 x 32).png" id="2_tln2o"]
[ext_resource type="Texture2D" uid="uid://gdowu7nwg6u6" path="res://assets/Sprite Pack 2/2 - Mr. Mochi/Hurt (32 x 32).png" id="2_yta7d"]
[ext_resource type="Texture2D" uid="uid://c46qv6ocanfbw" path="res://assets/Sprite Pack 2/2 - Mr. Mochi/Jumping (32 x 32).png" id="3_d3f78"]
[ext_resource type="Texture2D" uid="uid://ci68c1wj5bui1" path="res://assets/Sprite Pack 2/2 - Mr. Mochi/Running (32 x 32).png" id="4_xkkoe"]
[ext_resource type="AudioStream" uid="uid://c5pgr2qoobkgk" path="res://sounds/jump_sfx.wav" id="6_ymqjp"]

[sub_resource type="AtlasTexture" id="AtlasTexture_4x8sr"]
atlas = ExtResource("2_tln2o")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pnht1"]
atlas = ExtResource("2_tln2o")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jc5un"]
atlas = ExtResource("4_xkkoe")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vg7h6"]
atlas = ExtResource("4_xkkoe")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ffi60"]
atlas = ExtResource("4_xkkoe")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2nq0f"]
atlas = ExtResource("4_xkkoe")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_kwbtp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_yta7d")
}],
"loop": true,
"name": &"hurt",
"speed": 5.0
}, {
"frames": [{
"duration": 10.0,
"texture": SubResource("AtlasTexture_4x8sr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pnht1")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_d3f78")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jc5un")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vg7h6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ffi60")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2nq0f")
}],
"loop": true,
"name": &"run",
"speed": 8.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yd7uq"]
size = Vector2(16, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yqrpi"]
size = Vector2(12, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b3n1t"]
size = Vector2(13, 4.5)

[node name="player" type="CharacterBody2D"]
collision_mask = 70
script = ExtResource("1_xdsmo")

[node name="animator" type="AnimationPlayer" parent="."]

[node name="anim" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_kwbtp")
animation = &"idle"
autoplay = "idle"
frame_progress = 0.565007

[node name="remote" type="RemoteTransform2D" parent="."]

[node name="hurtbox" type="Area2D" parent="."]
position = Vector2(0, -16)
collision_layer = 32
collision_mask = 20

[node name="collsion" type="CollisionShape2D" parent="hurtbox"]
position = Vector2(0, 8.5)
shape = SubResource("RectangleShape2D_yd7uq")
debug_color = Color(0.866697, 0.344774, 0.224029, 0.42)

[node name="collision" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_yqrpi")

[node name="ray_right" type="RayCast2D" parent="."]
position = Vector2(5, -5)
target_position = Vector2(7, 0)
collision_mask = 4

[node name="ray_left" type="RayCast2D" parent="."]
position = Vector2(-4, -5)
target_position = Vector2(-7, 0)
collision_mask = 4

[node name="head_collider" type="Area2D" parent="."]
position = Vector2(-4, -21)
collision_layer = 0
collision_mask = 64

[node name="head_collision" type="CollisionShape2D" parent="head_collider"]
position = Vector2(4, 4)
shape = SubResource("RectangleShape2D_b3n1t")

[node name="jump_sfx" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_ymqjp")
volume_db = -50.0

[connection signal="area_entered" from="hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="body_entered" from="hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="body_entered" from="head_collider" to="." method="_on_head_collider_body_entered"]
